Synchronize mobile dashboards attendance and tuition